default color integration fixes

--- a/style.css
+++ b/style.css
@@ -136,5 +136,5 @@ span {
 }
 
 #tealt {
-  background-image: linear-gradient(lightseagreen, teal);
+  background-image: linear-gradient(#076, #065);
 }
